tests/sumo/extended/calibrator/errors/invalid_flow/errors.sumo.agg
Error: flow cannot be created
Quitting (on error).
Warning: 1 total messages of type: No flow intervals in calibrator '%'.
